# gtest

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  math.c  test_libft.cpp  test_math.cpp  test_sample.cpp
include/: math.h
libft/: Makefile  libft.h
libft/src/: ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstsize.c  ft_memcmp.c  ft_memcpy.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcpy.c  ft_strlcpy.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c
src/: math.c
